DetailActivity.kt completed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MovieCatalogue">
-        <activity android:name=".activity.splashscreen.SplashScreenActivity"
+        <activity android:name=".activity.detail.DetailActivity"></activity>
+        <activity
+            android:name=".activity.splashscreen.SplashScreenActivity"
             android:theme="@style/Theme.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,8 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.main.MainActivity">
-        </activity>
+        <activity android:name=".activity.main.MainActivity"></activity>
 
         <meta-data
             android:name="preloaded_fonts"
