--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MovieCatalogue">
-        <activity android:name=".activity.detail.DetailActivity"></activity>
+        <activity android:name=".activity.detail.DetailActivity"/>
         <activity
             android:name=".activity.splashscreen.SplashScreenActivity"
             android:theme="@style/Theme.SplashScreen">
@@ -19,7 +19,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.main.MainActivity"></activity>
+        <activity android:name=".activity.main.MainActivity"/>
 
         <meta-data
             android:name="preloaded_fonts"
