--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField("String", "API_KEY", '"9d7f6bbc95d4db740e5763a39a73a659"')
+        buildConfigField("String", "BASE_URL", '"https://api.themoviedb.org/3/"')
     }
 
     buildTypes {
@@ -55,6 +56,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
 
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation "androidx.fragment:fragment-ktx:1.3.3"
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
@@ -74,12 +76,6 @@ dependencies {
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
     //hilt
-    implementation "androidx.fragment:fragment-ktx:1.3.3"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
-    implementation "com.google.dagger:hilt-android:2.31-alpha"
-    kapt 'androidx.hilt:hilt-compiler:1.0.0-beta01'
+    implementation "com.google.dagger:hilt-android:2.28-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
-
 }
