--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,4 +87,16 @@ dependencies {
     kaptAndroidTest "com.google.dagger:hilt-android-compiler:$dagger_hilt"
     testImplementation "com.google.dagger:hilt-android-testing:$dagger_hilt"
     kaptTest "com.google.dagger:hilt-android-compiler:$dagger_hilt"
+
+    //mockito
+    testImplementation "androidx.arch.core:core-testing:$androidCoreTestVersion"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockitoKotlinVersion"
+
+    // Local Unit Tests
+    implementation "androidx.test:core:1.2.0"
+    testImplementation "org.hamcrest:hamcrest-all:1.3"
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation "org.robolectric:robolectric:4.3.1"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1"
+    testImplementation "com.google.truth:truth:1.0.1"
 }
