--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ buildscript {
         dagger_hilt = "2.28-alpha"
         androidx_dagger_hilt = "1.0.0-alpha01"
         lifecycle_version = "2.2.0"
+        androidCoreTestVersion = '2.1.0'
+        mockitoKotlinVersion = '2.2.0'
     }
     repositories {
         google()
