--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,22 +48,11 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-
-    testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.mockito:mockito-core:3.6.0'
-    testImplementation 'org.mockito:mockito-inline:3.6.0'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "androidx.fragment:fragment-ktx:1.3.3"
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
-
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test:rules:1.3.0'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.2'
 
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -80,17 +69,13 @@ dependencies {
 
     // Dagger Hilt
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$androidx_dagger_hilt"
-    kapt "androidx.hilt:hilt-compiler:$androidx_dagger_hilt"
     implementation "com.google.dagger:hilt-android:$dagger_hilt"
-    kapt "com.google.dagger:hilt-android-compiler:$dagger_hilt"
-    androidTestImplementation  "com.google.dagger:hilt-android-testing:$dagger_hilt"
-    kaptAndroidTest "com.google.dagger:hilt-android-compiler:$dagger_hilt"
     testImplementation "com.google.dagger:hilt-android-testing:$dagger_hilt"
+    androidTestImplementation  "com.google.dagger:hilt-android-testing:$dagger_hilt"
+    kapt "androidx.hilt:hilt-compiler:$androidx_dagger_hilt"
+    kapt "com.google.dagger:hilt-android-compiler:$dagger_hilt"
     kaptTest "com.google.dagger:hilt-android-compiler:$dagger_hilt"
-
-    //mockito
-    testImplementation "androidx.arch.core:core-testing:$androidCoreTestVersion"
-    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockitoKotlinVersion"
+    kaptAndroidTest "com.google.dagger:hilt-android-compiler:$dagger_hilt"
 
     // Local Unit Tests
     implementation "androidx.test:core:1.2.0"
@@ -99,7 +84,20 @@ dependencies {
     testImplementation "org.robolectric:robolectric:4.3.1"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1"
     testImplementation "com.google.truth:truth:1.0.1"
+    testImplementation "io.mockk:mockk:1.10.6"
+    testImplementation "androidx.arch.core:core-testing:$androidCoreTestVersion"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockitoKotlinVersion"
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:3.6.0'
+    testImplementation 'org.mockito:mockito-inline:3.6.0'
 
-    //for testing retrofit.
-    testImplementation("com.squareup.okhttp3:mockwebserver:4.7.2")
+    //instrument test
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test:rules:1.3.0'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:3.12.1'
+    debugImplementation "androidx.fragment:fragment-testing:1.3.0-alpha08"
+    implementation "androidx.test.espresso:espresso-idling-resource:3.2.0"
 }
