--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         lifecycle_version = "2.2.0"
         androidCoreTestVersion = '2.1.0'
         mockitoKotlinVersion = '2.2.0'
+        idleResourceVersion = '3.3.0'
     }
     repositories {
         google()
