--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    kapt "com.github.bumptech.glide:compiler:4.12.0"
 
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -68,14 +68,12 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
     // Dagger Hilt
-    implementation "androidx.hilt:hilt-lifecycle-viewmodel:$androidx_dagger_hilt"
-    implementation "com.google.dagger:hilt-android:$dagger_hilt"
-    testImplementation "com.google.dagger:hilt-android-testing:$dagger_hilt"
-    androidTestImplementation  "com.google.dagger:hilt-android-testing:$dagger_hilt"
-    kapt "androidx.hilt:hilt-compiler:$androidx_dagger_hilt"
-    kapt "com.google.dagger:hilt-android-compiler:$dagger_hilt"
-    kaptTest "com.google.dagger:hilt-android-compiler:$dagger_hilt"
-    kaptAndroidTest "com.google.dagger:hilt-android-compiler:$dagger_hilt"
+    implementation 'com.google.dagger:hilt-android:2.35.1'
+    kapt 'com.google.dagger:hilt-compiler:2.35.1'
+    androidTestImplementation  'com.google.dagger:hilt-android-testing:2.35.1'
+    kaptAndroidTest 'com.google.dagger:hilt-compiler:2.35.1'
+    testImplementation 'com.google.dagger:hilt-android-testing:2.35.1'
+    kaptTest 'com.google.dagger:hilt-compiler:2.35.1'
 
     // Local Unit Tests
     implementation "androidx.test:core:1.2.0"
@@ -97,7 +95,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:3.12.1'
+    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.9.1'
     debugImplementation "androidx.fragment:fragment-testing:1.3.0-alpha08"
     implementation "androidx.test.espresso:espresso-idling-resource:3.2.0"
+}
+
+kapt {
+    correctErrorTypes true
 }
