--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext{
-        kotlin_version = "1.4.31"
-        dagger_hilt = "2.28-alpha"
+        kotlin_version = "1.5.0"
+        dagger_hilt = "2.35.1"
         androidx_dagger_hilt = "1.0.0-alpha01"
         lifecycle_version = "2.2.0"
         androidCoreTestVersion = '2.1.0'
@@ -16,7 +16,8 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.3"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.google.dagger:hilt-android-gradle-plugin:$dagger_hilt"
+//        classpath "com.google.dagger:hilt-android-gradle-plugin:$dagger_hilt"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.35.1'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
