--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,7 +76,7 @@ dependencies {
     kaptTest 'com.google.dagger:hilt-compiler:2.35.1'
 
     // Local Unit Tests
-    implementation "androidx.test:core:1.2.0"
+    implementation "androidx.test:core:1.3.0"
     testImplementation "org.hamcrest:hamcrest-all:1.3"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation "org.robolectric:robolectric:4.3.1"
@@ -86,8 +86,8 @@ dependencies {
     testImplementation "androidx.arch.core:core-testing:$androidCoreTestVersion"
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockitoKotlinVersion"
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.mockito:mockito-core:3.6.0'
-    testImplementation 'org.mockito:mockito-inline:3.6.0'
+    testImplementation 'org.mockito:mockito-core:3.9.0'
+    testImplementation 'org.mockito:mockito-inline:3.9.0'
 
     //instrument test
     androidTestImplementation 'androidx.test:runner:1.3.0'
@@ -96,8 +96,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.9.1'
-    debugImplementation "androidx.fragment:fragment-testing:1.3.0-alpha08"
-    implementation "androidx.test.espresso:espresso-idling-resource:3.2.0"
+    debugImplementation "androidx.fragment:fragment-testing:1.3.3"
+    implementation "androidx.test.espresso:espresso-idling-resource:3.3.0"
 }
 
 kapt {
