--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,14 @@ dependencies {
     testImplementation 'com.google.dagger:hilt-android-testing:2.35.1'
     kaptTest 'com.google.dagger:hilt-compiler:2.35.1'
 
+    //Room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
+    // optional - Test helpers
+    testImplementation "androidx.room:room-testing:$room_version"
+
     // Local Unit Tests
     implementation "androidx.test:core:1.3.0"
     testImplementation "org.hamcrest:hamcrest-all:1.3"
