add unit test for room and paging

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.irfan.moviecatalogue.ui.activity.main.MainActivity"/>
-
+        <activity android:name="com.irfan.moviecatalogue.ui.activity.favourite.FavouriteActivity"/>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
