--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,6 +106,10 @@ dependencies {
     androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.9.1'
     debugImplementation "androidx.fragment:fragment-testing:1.3.3"
     implementation "androidx.test.espresso:espresso-idling-resource:3.3.0"
+
+    //Paging
+    implementation "androidx.paging:paging-runtime:$paging_version"
+//    testImplementation "androidx.paging:paging-common:$paging_version"
 }
 
 kapt {
