--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,12 +43,12 @@ android {
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.core:core-ktx:1.5.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation "androidx.fragment:fragment-ktx:1.3.3"
+    implementation "androidx.fragment:fragment-ktx:1.3.4"
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
@@ -104,11 +104,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.9.1'
-    debugImplementation "androidx.fragment:fragment-testing:1.3.3"
+    debugImplementation "androidx.fragment:fragment-testing:1.3.4"
     implementation "androidx.test.espresso:espresso-idling-resource:3.3.0"
 
     //Paging
-    implementation "androidx.paging:paging-runtime:$paging_version"
+    //noinspection GradleDependency
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
 //    testImplementation "androidx.paging:paging-common:$paging_version"
 }
 
